# hwu_timetable

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
hw_timetable/: __init__.py  api.py  auth.py  cli.py  ics_builder.py  models.py  util.py
hw_timetable.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_dst.py  test_duplicates.py  test_locations.py  test_offline_cli.py  test_validation.py  test_weeks.py
