[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw_timetable"
version = "0.1.0"
description = "HW Timetable exporter CLI"
authors = [{name = "Auto Dev"}]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "tzdata>=2023.3",
    "python-dotenv>=1.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
